add scene : step 99

--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj
@@ -191,6 +191,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClCompile Include="..\Classes\Step01_RootScene.cpp" />
     <ClCompile Include="..\Classes\Step01_Tool_TerrainData.cpp" />
     <ClCompile Include="..\Classes\Step02_RootScene.cpp" />
+    <ClCompile Include="..\Classes\Step99_RootScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -235,6 +236,7 @@ xcopy "$(ProjectDir)..\vld\bin\Win32\*.*" "$(OutDir)" /D /E /I /F /Y
     <ClInclude Include="..\Classes\Step01_RootScene.h" />
     <ClInclude Include="..\Classes\Step01_Tool_TerrainData.h" />
     <ClInclude Include="..\Classes\Step02_RootScene.h" />
+    <ClInclude Include="..\Classes\Step99_RootScene.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
