--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClCompile Include="..\Classes\Step02_Animation_ListScene.cpp">
       <Filter>src\scene\step02\animation</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\Research_Input_GamePadTest.cpp">
+      <Filter>src\scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -313,6 +316,9 @@
     </ClInclude>
     <ClInclude Include="..\Classes\Step02_Animation_ListScene.h">
       <Filter>src\scene\step02\animation</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\Research_Input_GamePadTest.h">
+      <Filter>src\scene</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
