--- a/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
+++ b/cocos2dx_playground/proj.win32/cocos2dx_playground.vcxproj.filters
@@ -329,6 +329,9 @@
     <ClInclude Include="..\Classes\Research_Input_GamePadTest.h">
       <Filter>src\scene</Filter>
     </ClInclude>
+    <ClInclude Include="..\Classes\CPG_Input_KeyCodeContainer.h">
+      <Filter>src\input</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="game.rc">
